--- a/enzo/page xbox.html
+++ b/enzo/page xbox.html
@@ -53,6 +53,9 @@ body {
 					    <li>
 							<a href="Accueil.html"title="Page d'accueil">Page d'accueil</a>
 				        </li>
+						<li>
+							<a href="Enzo.html"title="Enzo">Enzo</a>
+				        </li>
 				        <li>
 							<a href="../ThomasV/index.html"title="Page de Thomas.V">Page de Thomas.V</a>
 				        </li>	
