--- a/ThomasT/index.html
+++ b/ThomasT/index.html
@@ -61,7 +61,7 @@
 			</li>
 
 			<li class="home">
-				<a href="index.html">
+				<a href="..index.html">
 					<img src="IMG/home.png" width="20">
 				</a>
 			</li>
